@@ -548,6 +548,21 @@
               and the right stick creates a separate joystick device.
             </para>
             <para>
+              Instead of giving just a single button, it is also
+              possible to give two buttons
+              to <option>--ui-buttonmap</option> to allow shifting:
+            </para>           
+            <programlisting><![CDATA[xboxdrv -s \
+  --ui-clear \
+  --ui-buttonmap A=JS_0,B=JS_1,LB+A=JS_2,LB+B=JS_3]]></programlisting>
+            <para>
+              In this example LB acts as shift button, if A is pressed
+              without LB it will send out a JS_0 event, but if LB is
+              pressed it will send a JS_2 event instead. This allows
+              you to multiply the number of available buttons on the
+              controller.
+            </para>
+            <para>
               See the section KEYBOARD EMULATION below on how to
               resolve issues with Xorg not detecting the virtual
               keyboard that xboxdrv creates.
