@@ -3,7 +3,8 @@ xboxdrv 0.4.14 - (??/Mai/2010)
 
 * added device_id handling to --ui-buttonmap and --ui-axismap, allows
   the creation of multiple input devices from a single controller
-
+* added shifting to --ui-buttonmap, allows sending of different events
+  when a shift button is pressed
 
 xboxdrv 0.4.13 - (13/Mai/2010)
 ==============================
